--- a/minikube/setup.yml
+++ b/minikube/setup.yml
@@ -51,14 +51,6 @@
     - name: Create empty file(config) under directory.
       shell: touch $HOME/.kube/config
 
-      #    - name: copy these configuration line
-      #shell: |
-      #  echo "export MINIKUBE_WANTUPDATENOTIFICATION=false" >> ~/.profile,
-      #  echo "export MINIKUBE_WANTREPORTERRORPROMPT=false" >> ~/.profile
-      #  echo "export MINIKUBE_HOME=$HOME" >> ~/.profile
-      #  echo "export CHANGE_MINIKUBE_NONE_USER=true" >> ~/.profile
-      #  echo "export KUBECONFIG=$HOME/.kube/config" >> ~/.profile
-
     - name: Start Minikube with option vm-driver=docker
       shell: minikube start -p {{ cluster_name }} --vm-driver=docker --insecure-registry "10.0.0.0/24"
       args:
@@ -76,10 +68,10 @@
     - name: Create embedded kubeconfig
       shell: |
         eval "$(minikube docker-env -p {{ cluster_name }})"
-        kubectl config set-cluster Newyorker --server https://172.17.0.3:8443 --certificate-authority=/home/vagrant/.minikube/ca.crt  --embed-certs=true --kubeconfig minikube/files/kubeconfig_embed
-        kubectl config set-credentials Newyorker --client-certificate=/home/vagrant/.minikube/profiles/Newyorker/client.crt --client-key=/home/vagrant/.minikube/profiles/Newyorker/client.key  --embed-certs=true --kubeconfig minikube/files/kubeconfig_embed
-        kubectl config set-context Newyorker --cluster=Newyorker --user=Newyorker --kubeconfig  minikube/files/kubeconfig_embed
-        kubectl config use-context Newyorker --kubeconfig minikube/files/kubeconfig_embed
+        kubectl config set-cluster Newyorker --server https://172.17.0.3:8443 --certificate-authority=/home/vagrant/.minikube/ca.crt  --embed-certs=true --kubeconfig files/kubeconfig_embed
+        kubectl config set-credentials Newyorker --client-certificate=/home/vagrant/.minikube/profiles/Newyorker/client.crt --client-key=/home/vagrant/.minikube/profiles/Newyorker/client.key  --embed-certs=true --kubeconfig files/kubeconfig_embed
+        kubectl config set-context Newyorker --cluster=Newyorker --user=Newyorker --kubeconfig  files/kubeconfig_embed
+        kubectl config use-context Newyorker --kubeconfig files/kubeconfig_embed
 
     - name: Build the custom Jenkins image
       shell: |
@@ -110,20 +102,23 @@
       args:
         executable: /bin/bash
     
-    - name: Create Jenkins Secrets
-      shell: |
-        cd ~/service/ansible_code/minikube/files
-        wget -nc 172.17.0.3:30000/jnlpJars/jenkins-cli.jar
-        java -jar jenkins-cli.jar  -s http://admin:admin@172.17.0.3:30000 create-credentials-by-xml system::system::jenkins _ < kube-config-secrets.xml
-
     - name: Restore Jobs
       shell: |
         cd ~/service/ansible_code/docker/jenkins
-        wget -nc 172.17.0.3:30000/jnlpJars/jenkins-cli.jar
-        java -jar jenkins-cli.jar -s http://admin:admin@172.17.0.3:30000 create-job hello_world < hello_world.job
-        java -jar jenkins-cli.jar -s http://admin:admin@172.17.0.3:30000 create-job create_app_container < create_app_container.job
-        java -jar jenkins-cli.jar -s http://admin:admin@172.17.0.3:30000 create-job hello_world_test < hello_world_test.job
-        java -jar jenkins-cli.jar -s http://admin:admin@172.17.0.3:30000 create-job deploy_to_k8s < deploy_to_k8s.job
+        export LOCAL_K8S_IP=$(minikube docker-env -p {{ cluster_name }} | grep -oh -E '[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*')
+        wget -nc $LOCAL_K8S_IP:30000/jnlpJars/jenkins-cli.jar
+        java -jar jenkins-cli.jar -s http://admin:admin@$LOCAL_K8S_IP:30000 create-job hello_world < hello_world.job
+        java -jar jenkins-cli.jar -s http://admin:admin@$LOCAL_K8S_IP:30000 create-job create_app_container < create_app_container.job
+        java -jar jenkins-cli.jar -s http://admin:admin@$LOCAL_K8S_IP:30000 create-job hello_world_test < hello_world_test.job
+        java -jar jenkins-cli.jar -s http://admin:admin@$LOCAL_K8S_IP:30000 create-job deploy_to_k8s < deploy_to_k8s.job
       args:
         executable: /bin/bash
 
+    # For some, still unknown, reason this fail with connection refused if put before the
+    # restore step 
+    - name: Create Jenkins Secrets
+      shell: |
+        export LOCAL_K8S_IP="$(minikube docker-env -p {{ cluster_name }} | grep -oh -E '[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*')"
+        cd ~/service/ansible_code/minikube/files
+        wget -nc ${LOCAL_K8S_IP}:30000/jnlpJars/jenkins-cli.jar
+        java -jar jenkins-cli.jar  -s http://admin:admin@$LOCAL_K8S_IP:30000 create-credentials-by-xml system::system::jenkins _ < kube-config-secrets.xml
